-- Normalized Data Store (NDS) executable DDL.
-- NDS is the 3NF integrated layer. Business timestamps preserve New York local
-- values as TIMESTAMP WITHOUT TIME ZONE; audit timestamps use UTC TIMESTAMPTZ.

CREATE SCHEMA IF NOT EXISTS nds;

CREATE TABLE IF NOT EXISTS nds.ref_source_system (
    source_system_code VARCHAR(50) PRIMARY KEY,
    source_system_name VARCHAR(100) NOT NULL,
    source_type VARCHAR(30) NOT NULL
        CHECK (source_type IN ('DATABASE', 'DOCUMENT', 'FILE')),
    is_active BOOLEAN NOT NULL DEFAULT true
);

INSERT INTO nds.ref_source_system (
    source_system_code,
    source_system_name,
    source_type
) VALUES
    ('HR_MYSQL', 'Driver HR MySQL', 'DATABASE'),
    ('FLEET_MONGODB', 'Fleet MongoDB', 'DOCUMENT'),
    ('DISPATCH_POSTGRES', 'Dispatch PostgreSQL', 'DATABASE'),
    ('TLC_FILE', 'NYC TLC Green Taxi Files', 'FILE'),
    ('LOOKUP_FILE', 'Vendor and Taxi Zone Lookup Files', 'FILE')
ON CONFLICT (source_system_code) DO UPDATE
SET source_system_name = EXCLUDED.source_system_name,
    source_type = EXCLUDED.source_type,
    is_active = true;

CREATE TABLE IF NOT EXISTS nds.nds_vendor (
    vendor_sk INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vendor_nk INT NOT NULL,
    vendor_name VARCHAR(100) NOT NULL,
    source_system_code VARCHAR(50) NOT NULL
        REFERENCES nds.ref_source_system (source_system_code),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT ux_nds_vendor_vendor_nk UNIQUE (vendor_nk)
);

CREATE TABLE IF NOT EXISTS nds.nds_location (
    location_sk INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    location_nk INT NOT NULL,
    borough VARCHAR(100) NOT NULL,
    zone VARCHAR(100) NOT NULL,
    service_zone VARCHAR(50) NULL,
    source_system_code VARCHAR(50) NOT NULL
        REFERENCES nds.ref_source_system (source_system_code),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT ux_nds_location_location_nk UNIQUE (location_nk)
);

CREATE TABLE IF NOT EXISTS nds.nds_driver (
    driver_sk INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    driver_nk VARCHAR(50) NOT NULL,
    vendor_sk INT NOT NULL REFERENCES nds.nds_vendor (vendor_sk),
    driver_code VARCHAR(50) NOT NULL,
    display_name VARCHAR(100) NOT NULL,
    hire_date DATE NOT NULL,
    employment_status VARCHAR(50) NOT NULL DEFAULT 'ACTIVE',
    license_status VARCHAR(50) NOT NULL DEFAULT 'ACTIVE',
    license_expiry_date DATE NOT NULL,
    experience_years INT NOT NULL DEFAULT 0 CHECK (experience_years >= 0),
    home_borough VARCHAR(100) NOT NULL,
    is_inferred BOOLEAN NOT NULL DEFAULT false,
    source_system_code VARCHAR(50) NOT NULL
        REFERENCES nds.ref_source_system (source_system_code),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT ux_nds_driver_driver_nk UNIQUE (driver_nk)
);

CREATE INDEX IF NOT EXISTS ix_nds_driver_vendor
    ON nds.nds_driver (vendor_sk);

CREATE TABLE IF NOT EXISTS nds.nds_driver_history (
    driver_history_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    driver_sk INT NOT NULL REFERENCES nds.nds_driver (driver_sk),
    event_id VARCHAR(50) NOT NULL,
    effective_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    delivered_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    attribute_name VARCHAR(100) NOT NULL,
    old_value TEXT NULL,
    new_value TEXT NOT NULL,
    source_system_code VARCHAR(50) NOT NULL
        REFERENCES nds.ref_source_system (source_system_code),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT nds_driver_history_delivered_after_effective
        CHECK (delivered_at >= effective_at),
    CONSTRAINT ux_nds_driver_history_event_id UNIQUE (event_id)
);

CREATE INDEX IF NOT EXISTS ix_nds_driver_history_driver
    ON nds.nds_driver_history (driver_sk, effective_at);

CREATE TABLE IF NOT EXISTS nds.nds_vehicle (
    vehicle_sk INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vehicle_nk VARCHAR(50) NOT NULL,
    vendor_sk INT NOT NULL REFERENCES nds.nds_vendor (vendor_sk),
    plate_token VARCHAR(100) NOT NULL,
    model_year INT NOT NULL,
    vehicle_type VARCHAR(50) NOT NULL,
    service_start_date DATE NOT NULL,
    vehicle_status VARCHAR(50) NOT NULL DEFAULT 'ACTIVE',
    last_inspection_date DATE NOT NULL,
    is_inferred BOOLEAN NOT NULL DEFAULT false,
    source_system_code VARCHAR(50) NOT NULL
        REFERENCES nds.ref_source_system (source_system_code),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT nds_vehicle_inspection_after_service_start
        CHECK (last_inspection_date >= service_start_date),
    CONSTRAINT ux_nds_vehicle_vehicle_nk UNIQUE (vehicle_nk),
    CONSTRAINT ux_nds_vehicle_plate_token UNIQUE (plate_token)
);

CREATE INDEX IF NOT EXISTS ix_nds_vehicle_vendor
    ON nds.nds_vehicle (vendor_sk);

CREATE TABLE IF NOT EXISTS nds.nds_shift (
    shift_sk BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shift_nk VARCHAR(50) NOT NULL,
    driver_sk INT NOT NULL REFERENCES nds.nds_driver (driver_sk),
    vehicle_sk INT NOT NULL REFERENCES nds.nds_vehicle (vehicle_sk),
    vendor_sk INT NOT NULL REFERENCES nds.nds_vendor (vendor_sk),
    shift_start TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    shift_end TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    assigned_start_zone INT NOT NULL REFERENCES nds.nds_location (location_sk),
    actual_end_zone INT NOT NULL REFERENCES nds.nds_location (location_sk),
    trip_count_source INT NOT NULL DEFAULT 0 CHECK (trip_count_source >= 0),
    occupied_minutes_source DECIMAL(12, 2) NOT NULL DEFAULT 0.00
        CHECK (occupied_minutes_source >= 0.00),
    idle_minutes_source DECIMAL(12, 2) NOT NULL DEFAULT 0.00
        CHECK (idle_minutes_source >= 0.00),
    shift_status VARCHAR(50) NOT NULL DEFAULT 'COMPLETED',
    source_system_code VARCHAR(50) NOT NULL
        REFERENCES nds.ref_source_system (source_system_code),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT nds_shift_end_after_start CHECK (shift_end >= shift_start),
    CONSTRAINT ux_nds_shift_shift_nk UNIQUE (shift_nk)
);

CREATE INDEX IF NOT EXISTS ix_nds_shift_driver_time
    ON nds.nds_shift (driver_sk, shift_start);

CREATE INDEX IF NOT EXISTS ix_nds_shift_vehicle_time
    ON nds.nds_shift (vehicle_sk, shift_start);

CREATE TABLE IF NOT EXISTS nds.nds_trip (
    trip_sk BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    trip_nk TEXT NOT NULL,
    vendor_sk INT NOT NULL REFERENCES nds.nds_vendor (vendor_sk),
    pickup_datetime TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    dropoff_datetime TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    passenger_count INT NULL,
    trip_distance DECIMAL(9, 4) NULL,
    pickup_location_sk INT NOT NULL REFERENCES nds.nds_location (location_sk),
    dropoff_location_sk INT NOT NULL REFERENCES nds.nds_location (location_sk),
    ratecode_id INT NULL,
    store_and_fwd_flag CHAR(1) NULL,
    payment_type INT NULL,
    fare_amount DECIMAL(9, 2) NOT NULL DEFAULT 0.00,
    extra DECIMAL(9, 2) NOT NULL DEFAULT 0.00,
    mta_tax DECIMAL(9, 2) NOT NULL DEFAULT 0.00,
    tip_amount DECIMAL(9, 2) NOT NULL DEFAULT 0.00,
    tolls_amount DECIMAL(9, 2) NOT NULL DEFAULT 0.00,
    improvement_surcharge DECIMAL(9, 2) NOT NULL DEFAULT 0.00,
    total_amount DECIMAL(9, 2) NOT NULL DEFAULT 0.00,
    trip_type INT NULL,
    source_file VARCHAR(255) NOT NULL,
    source_row_number INT NOT NULL CHECK (source_row_number >= 2),
    is_anomaly BOOLEAN NOT NULL DEFAULT false,
    source_system_code VARCHAR(50) NOT NULL
        REFERENCES nds.ref_source_system (source_system_code),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT nds_trip_dropoff_after_pickup
        CHECK (dropoff_datetime >= pickup_datetime),
    CONSTRAINT ux_nds_trip_trip_nk UNIQUE (trip_nk)
);

CREATE INDEX IF NOT EXISTS ix_nds_trip_pickup_time
    ON nds.nds_trip (pickup_datetime);

CREATE INDEX IF NOT EXISTS ix_nds_trip_vendor
    ON nds.nds_trip (vendor_sk);

CREATE TABLE IF NOT EXISTS nds.nds_trip_assignment (
    assignment_sk BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    trip_sk BIGINT NOT NULL REFERENCES nds.nds_trip (trip_sk),
    driver_sk INT NOT NULL REFERENCES nds.nds_driver (driver_sk),
    vehicle_sk INT NOT NULL REFERENCES nds.nds_vehicle (vehicle_sk),
    shift_sk BIGINT NOT NULL REFERENCES nds.nds_shift (shift_sk),
    assignment_timestamp TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    assignment_method VARCHAR(50) NOT NULL,
    source_system_code VARCHAR(50) NOT NULL
        REFERENCES nds.ref_source_system (source_system_code),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT ux_nds_trip_assignment_trip_sk UNIQUE (trip_sk)
);

CREATE INDEX IF NOT EXISTS ix_nds_trip_assignment_shift
    ON nds.nds_trip_assignment (shift_sk);

CREATE INDEX IF NOT EXISTS ix_nds_trip_assignment_driver
    ON nds.nds_trip_assignment (driver_sk);
